--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
 }
 @media screen and (max-width: 420px) {
   #lezioni .row>.left,
-  #lezioni .row>.right,
-  #lezioni .row> h1 {
+  #lezioni .row>.right
+  {
   width: 100%;
   float: none;     
   }
